--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,143 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;700&display=swap');
+
+html,body {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+*{
+  font-family: 'Readex Pro', sans-serif;
+  transition: all ease .2s;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.primary-title{
+  font-size: 90px;
+  color: rgb(255, 255, 255);
+}
+
+.primary-button{
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 15px;
+  background: linear-gradient(45deg,rgb(254, 47, 112),rgb(255, 89, 64));
+  padding: 12px 30px;
+  border-radius: 30px;
+  border: none;
+  
+}
+.primary-button:hover{
+  background: linear-gradient(260deg,rgb(254, 48, 114),rgb(255, 89, 64));
+}
+.secondary-button{
+  color: rgb(121, 119, 119);
+  background-color: rgb(255, 255, 255);
+  font-weight: 500;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding: 12px 30px;
+  border-radius: 30px;
+  border: solid 2px rgb(121,119,119);
+  margin: 6px;
+}
+.secondary-button:hover{
+border: solid 2px rgb(48, 48, 48);
+  color: rgb(48, 48, 48);
+}
+/*--------- NAVBAR -----------*/
+
+
+.nav{
+  width: 100%;
+  display: flex;
+
+  justify-content: space-between;
+}
+.nav .nav-button{
+  color: rgb(254, 47, 112);
+  background-color: rgb(255, 255, 255);
+  font-size: 20px;
+  padding: 5px 20px;
+  margin: 10px;
+  border-radius: 10px;
+  border: none;
+}
+.nav-button:disabled{
+  opacity: .5;
+}
+.nav .logo-container{
+  width: 170px;
+  margin: 15px;
+}
+.nav .logo-container .logo{
+  width: 100%;
+}
+
+/*--------- Home Page -----------*/
+
+.overlay{
+  width:100vw;
+  min-height: 100vh;
+  position: relative;
+  background: linear-gradient(to bottom,
+  rgba(0,0,0,0.65) 0%,
+  rgba(0,0,0,0) 100%), url('/src/image/6e9794bcedeecf5a8f8f41338a2a7345.webp')
+}
+.home{
+  margin-top: 20vh;
+  display: flex;
+  justify-content: center;
+  flex-direction:column;
+  align-items: center;
+}
+
+/*--------- Auth Modal -----------*/
+
+.auth-modal{
+  
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  width: fit-content;
+  height: fit-content;
+ 
+  margin: 10px auto;
+  
+  max-width: 360px;
+  border: none;
+  box-shadow: -1px 1px 20px 0px rgba(0, 0, 0, 0.2);
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px; 
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+}
+.auth-modal h2{
+  text-transform: uppercase;
+}
+
+.auth-modal .close-icon{
+  align-self: flex-end;
+  border-radius: 10px; 
+  padding: 5px;
+}
+.auth-modal .close-icon:hover{
+  background-color: crimson;
+
+}
+.auth-modal form{
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.auth-modal input{
+  padding: 8px;
+  margin: 8px;
+  font-size: 17px;
 }
