--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;700&display=swap");
 
-html,body {
+html,
+body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-*{
-  font-family: 'Readex Pro', sans-serif;
-  transition: all ease .2s;
+* {
+  font-family: "Readex Pro", sans-serif;
+  transition: all ease 0.2s;
 }
 *,
 *::before,
@@ -15,25 +16,24 @@ html,body {
   box-sizing: inherit;
 }
 
-.primary-title{
+.primary-title {
   font-size: 90px;
   color: rgb(255, 255, 255);
 }
 
-.primary-button{
+.primary-button {
   color: #fff;
   text-transform: uppercase;
   font-size: 15px;
-  background: linear-gradient(45deg,rgb(254, 47, 112),rgb(255, 89, 64));
+  background: linear-gradient(45deg, rgb(254, 47, 112), rgb(255, 89, 64));
   padding: 12px 30px;
   border-radius: 30px;
   border: none;
-  
 }
-.primary-button:hover{
-  background: linear-gradient(260deg,rgb(254, 48, 114),rgb(255, 89, 64));
+.primary-button:hover {
+  background: linear-gradient(260deg, rgb(254, 48, 114), rgb(255, 89, 64));
 }
-.secondary-button{
+.secondary-button {
   color: rgb(121, 119, 119);
   background-color: rgb(255, 255, 255);
   font-weight: 500;
@@ -41,23 +41,22 @@ html,body {
   text-transform: uppercase;
   padding: 12px 30px;
   border-radius: 30px;
-  border: solid 2px rgb(121,119,119);
+  border: solid 2px rgb(121, 119, 119);
   margin: 6px;
 }
-.secondary-button:hover{
-border: solid 2px rgb(48, 48, 48);
+.secondary-button:hover {
+  border: solid 2px rgb(48, 48, 48);
   color: rgb(48, 48, 48);
 }
 /*--------- NAVBAR -----------*/
 
-
-.nav{
+.nav {
   width: 100%;
   display: flex;
 
   justify-content: space-between;
 }
-.nav .nav-button{
+.nav .nav-button {
   color: rgb(254, 47, 112);
   background-color: rgb(255, 255, 255);
   font-size: 20px;
@@ -66,78 +65,164 @@ border: solid 2px rgb(48, 48, 48);
   border-radius: 10px;
   border: none;
 }
-.nav-button:disabled{
-  opacity: .5;
+.nav-button:disabled {
+  opacity: 0.5;
 }
-.nav .logo-container{
+.nav .logo-container {
   width: 170px;
   margin: 15px;
 }
-.nav .logo-container .logo{
+.nav .logo-container .logo {
   width: 100%;
 }
 
 /*--------- Home Page -----------*/
 
-.overlay{
-  width:100vw;
+.overlay {
+  width: 100vw;
   min-height: 100vh;
   position: relative;
-  background: linear-gradient(to bottom,
-  rgba(0,0,0,0.65) 0%,
-  rgba(0,0,0,0) 100%), url('/src/image/6e9794bcedeecf5a8f8f41338a2a7345.webp')
+  background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.65) 0%,
+      rgba(0, 0, 0, 0) 100%
+    ),
+    url("/src/image/6e9794bcedeecf5a8f8f41338a2a7345.webp");
 }
-.home{
+.home {
   margin-top: 20vh;
   display: flex;
   justify-content: center;
-  flex-direction:column;
+  flex-direction: column;
   align-items: center;
 }
 
 /*--------- Auth Modal -----------*/
 
-.auth-modal{
-  
+.auth-modal {
   position: absolute;
   left: 0px;
   right: 0px;
   top: 0px;
   width: fit-content;
   height: fit-content;
- 
+
   margin: 10px auto;
-  
+
   max-width: 360px;
   border: none;
   box-shadow: -1px 1px 20px 0px rgba(0, 0, 0, 0.2);
   background-color: rgb(255, 255, 255);
-  border-radius: 10px; 
+  border-radius: 10px;
   padding: 40px;
   display: flex;
   flex-direction: column;
 }
-.auth-modal h2{
+.auth-modal h2 {
   text-transform: uppercase;
 }
 
-.auth-modal .close-icon{
+.auth-modal .close-icon {
   align-self: flex-end;
-  border-radius: 10px; 
+  border-radius: 10px;
   padding: 5px;
 }
-.auth-modal .close-icon:hover{
+.auth-modal .close-icon:hover {
   background-color: crimson;
-
 }
-.auth-modal form{
+.auth-modal form {
   display: flex;
   flex-direction: column;
-  
 }
 
-.auth-modal input{
+.auth-modal input {
   padding: 8px;
   margin: 8px;
   font-size: 17px;
+}
+
+/*--------- OnBoarding PAGE -----------*/
+.onboarding{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-top: solid 1px rgba(128, 128, 128, 0.5);
+ 
+}
+.onboarding form {
+  display: flex;
+  flex-direction: row;
+}
+@media screen and (max-width: 768px) {
+  .onboarding form {
+    flex-direction: column;
+  }
+}
+  
+
+.onboarding form input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.onboarding form section {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  text-align: start;
+  max-width: 1200px;
+}
+.onboarding form label {
+  margin: 10px 0;
+}
+.onboarding form input {
+  padding: 15px 30px;
+  margin: 10px 0;
+  font-size: 15px;
+  border: solid 2px rgb(219, 219, 219);
+  border-radius: 10px;
+}
+
+.onboarding form .multiple-input-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.onboarding form .multiple-input-container input {
+  margin-right: 10px;
+}
+
+.onboarding form .multiple-input-container label {
+  padding: 10px;
+  border: solid 2px rgb(144, 144, 144);
+  border-radius: 10px;
+  transition: all 0.3s;
+  margin-right: 10px;
+}
+
+.onboarding form input[type="radio"] {
+  display: none;
+}
+.onboarding form input[type="number"] {
+  width: 120px;
+}
+
+.onboarding form input[type="radio"]:checked + label {
+  border: solid 2px rgb(221, 39, 22);
+}
+
+.onboarding form input[type="submit"]:hover {
+  background-color: rgb(226, 135, 155);
+}
+
+.onboarding form .photo-container img {
+  width: 100%;
+  max-width: 500px;
+  height: 100%;
+  background-position: center;
+  object-fit: cover;
 }
