--- a/src/index.css
+++ b/src/index.css
@@ -226,3 +226,56 @@ input::-webkit-outer-spin-button {
   background-position: center;
   object-fit: cover;
 }
+
+/*--------- dashboard PAGE -----------*/
+
+.dashboard{
+  display: flex;
+  justify-content: space-between;
+
+ 
+}
+.dashboard .swipe-container{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.swipe {
+  position: absolute;
+}
+
+.dashboard .card-container {
+  max-width: 400px;
+  width: 90vw;
+  height: 80vh;
+}
+
+.card {
+  position: relative;
+  background-color: #fff;
+  max-width: 400px;
+    width: 90vw;
+  height: 80vh;
+
+  border-radius: 30px;
+  background-size: cover;
+  background-position: center;
+}
+
+.card h3 {
+  
+ margin: 0;
+  padding: 20px 25% 20px 25%;
+  text-align: center;
+  color: #fff;
+}
+
+.dashboard .swipe-info{
+  position: absolute;
+  bottom: 0;
+  padding: 10px;
+}
