adding chat by matches and show by prefered gender

--- a/src/index.css
+++ b/src/index.css
@@ -326,7 +326,9 @@ padding: 10px;
 }
 
 .img-container img{
-  width:100%
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /*--------- CHATDISPLAY COMPONENT -----------*/
